/* Grupo 48
 *   Eva Gomes (37806)
 *   João Santos (40335)
 *   João Vieira (45677)
 */
 
syntax = "proto3";

message DataMessage {
        bytes data = 1;
}

message EntryMessage {
	string key = 1;
        DataMessage value = 2;
}

message message_t
 {
        enum Opcode {
                OP_BAD     = 0;
                OP_SIZE    = 10;
                OP_DEL     = 20;
                OP_GET     = 30;
                OP_PUT     = 40;
                OP_GETKEYS = 50;
		OP_HEIGHT  = 60;
                OP_ERROR   = 99;
        }
        Opcode opcode = 1;

        enum C_type {
                CT_BAD    = 0;
                CT_KEY    = 10;
                CT_VALUE  = 20;
                CT_ENTRY  = 30;
                CT_KEYS   = 40;
                CT_RESULT = 50;
                CT_NONE   = 60;
        }
        C_type c_type = 2;

        sint32 data_size = 3;

        string data = 4;

};
